manifests/plex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    app.kubernetes.io/managed-by: ngarvey-homelab
